--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "dev:client": "vite dev --port 5000",
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build",
+    "vercel-build": "vite build",
     "preview": "vite preview",
     "start": "cross-env NODE_ENV=production node dist/index.cjs",
     "check": "tsc",
